--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
+/* Apply this style to the main container of each page */
+.page-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Apply this style to the content within each page */
+.content {
+  display: flex;
+  flex-direction: column; /* Stack elements vertically */
+  align-items: center;
+  margin: 0;
+}
+
+/* Apply styles to the buttons */
+.content a, button {
+  display: block;
+  cursor: pointer;
+  width: 150px;
+  padding: 10px 20px;
+  margin: 5px 0;
+  background-color: #007bff;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.content a:hover, button:hover {
+  background-color: #0056b3;
+}
+
+h2,
+h3 {
+  margin-bottom: 10px; /* Adjust this value as needed */
+}
+
+p {
+  margin-top: 10px; /* Adjust this value as needed */
 }
